# twitter-clone-pyrhon

./: pyproject.toml
authentication/: forms.py  views.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py
templates/: discover.html  generic_form.html  index.html  notifications.html  tweet_detail.html  user_detail.html
tweet/: admin.py  forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_author.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20210308_2239.py  0003_auto_20210309_0117.py  0004_twitteruser_following.py  0005_auto_20210329_1557.py
